# RK_VideoPipe

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  MPP_SDL2_SUMMARY.md  PLAN_MPP_SDL2_OPTIMIZATION.md  README.md  USAGE.md  USAGE_WITH_BOARD.md  gst_main.cc  main.cc  main_optimized.cpp  run-main.sh  simple_main.cc  使用文档.md
assets/configs/: yolo26.json
cmake/: common.cmake
models/: config.h  yolo26.cpp  yolo26.h  yolo26_post.cpp  yolo26_post.h
videocodec/: mpp_decoder.cpp
vp_node/: CMakeLists.txt
vp_node/nodes/: vp_bgr_to_nv12_node.cpp  vp_bgr_to_nv12_node.h  vp_fakesink_des_node.cpp  vp_fakesink_des_node.h  vp_file_src_node.cpp  vp_file_src_node.h  vp_mpp_file_src_node.cpp  vp_mpp_file_src_node.h  vp_mpp_sdl_src_node.cpp  vp_mpp_sdl_src_node.h  vp_nv12_sdl_des_node.cpp  vp_nv12_sdl_des_node.h  vp_nv12_to_bgr_node.cpp  vp_nv12_to_bgr_node.h  vp_screen_des_node.cpp  vp_screen_des_node.h  vp_sdl2_des_node.cpp  vp_sdl2_des_node.h
vp_node/nodes/base/: vp_node.cpp  vp_node.h
vp_node/nodes/infer/: vp_infer_node.cpp  vp_rk_first_yolo26.cpp  vp_rk_first_yolo26.h  vp_yolo26_preprocess_node.cpp  vp_yolo26_preprocess_node.h
vp_node/objects/: vp_frame_meta.cpp  vp_frame_meta.h
vp_node/vp_utils/analysis_board/: vp_node_on_screen.cpp
